--- a/boton-animado.html
+++ b/boton-animado.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="intro-css.css">
-    <title>Intro css</title>
+    <link rel="stylesheet" href="boton-animado.css">
+    <title>Boton animado</title>
 </head>
 <body>
-    <p>Esto es un estilo en linea</p>
+    <button>Submit</button>
 </body>
 </html>
