--- a/especificidad.html
+++ b/especificidad.html
@@ -3,15 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="especificidad.css">
     <title>Especificidad</title>
 </head>
 <body>
     <header>
         <h1>
-            <span style="color:green" class="title" id="page-title">
-                Adonay
-            </span>
+         Adonay 
         </h1>
     </header>
 </body>
