--- a/etiquetas.html
+++ b/etiquetas.html
@@ -9,5 +9,6 @@
     <p>Hola mundo de las etiquetas</p>
     <br> 
     <p>Este es el segundo parrafo</p>
+    <p>Este es un texto <strong>resaltado en negrita</strong></p>
 </body>
 </html>
