--- a/custom-properties.html
+++ b/custom-properties.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="custom-properties.css">
     <title>Custom properties</title>
 </head>
 <body>
     <form action="">
-        <input type="checkbox">
+        <input type="checkbox"/>
         <button>Cancelar</button>
         <button>Enviar</button>
     </form>
