--- a/modelo-caja.html
+++ b/modelo-caja.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modelo de caja en CSS</title>
-    <link rel="stylesheet" href="styles.css"> 
+    <link rel="stylesheet" href="modelo-caja.css"> 
 </head>
 <body>
     <div class="content-box"></div>
    
-    <h1>Modelo de caja</h1>
+    <!--<h1>Modelo de caja</h1>
     <div class="box-model-container">
-    </div>
+    </div> -->
     
 </body>
 </html>
