--- a/posicionamiento.html
+++ b/posicionamiento.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Posicionamiento en CSS</title>
-<link rel="stylesheet" href="styles.css" />
+<link rel="stylesheet" href="posicionamiento.css" />
 </head>
 <body>
 <h1>Posicionar elementos en CSS</h1>
