--- a/transiciones.html
+++ b/transiciones.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="intro-css.css">
-    <title>Intro css</title>
+    <link rel="stylesheet" href="trancisiones.css">
+    <title>Trancisiones</title>
 </head>
 <body>
-    <p>Esto es un estilo en linea</p>
+    <div class="container">
+        <div class="box"></div>
+    </div>
 </body>
 </html>
